Fix invisible icons in toolbox

--- a/ui/src/style/icons.css
+++ b/ui/src/style/icons.css
@@ -1,3 +1,7 @@
+.ngm-icon, .ngm-layer-icon {
+  background-color: var(--ngm-interaction);
+}
+
 .ngm-icon.disabled {
   cursor: default;
   pointer-events: none;
